refactor: use Stream#toList